# django-forms-workflows

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLIENT_AUDIT_REPORT.md  CONTRIBUTING.md  DEMO_CHECKLIST.md  DEMO_QUICK_REFERENCE.md  DEMO_SCRIPT.md  DEMO_TROUBLESHOOTING.md  EXECUTIVE_SUMMARY.md  FEATURE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  LDAP_TLS_CONFIGURATION.md  MANIFEST.in  NEXT_STEPS.md  PORTING_ANALYSIS.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  SJCME_SIMPLIFICATION_PLAN.md  manage_dev.py  pyproject.toml  ruff.toml  setup.py
.github/: PYPI_SETUP.md
.github/workflows/: ci.yml  publish-to-pypi.yml
django_forms_workflows/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py  callback_registry.py  conditions.py  context_processors.py  diff_views.py  form_builder_urls.py  form_builder_views.py  forms.py  history.py  ldap_backend.py  models.py  reporting_views.py  signals.py  sso_backends.py  sso_views.py  sync_api.py  sync_views.py  tasks.py  urls.py  utils.py  views.py  workflow_builder_views.py  workflow_engine.py
django_forms_workflows/data_sources/: __init__.py  base.py  database_source.py  ldap_source.py  user_source.py
django_forms_workflows/email_backends/: gmail_api.py
django_forms_workflows/handlers/: __init__.py  api_handler.py  base.py  database_handler.py  email_handler.py  executor.py  file_handler.py  ldap_handler.py
django_forms_workflows/migrations/: 0001_initial.py  0002_prefillsource_alter_formfield_prefill_source_and_more.py  0003_postsubmissionaction.py  0010_add_prefillsource_template_fields.py  0014_add_form_category.py  0015_add_workflowstage_staged_approvals.py  0016_add_pdf_generation.py  0017_add_notification_batching.py  0018_add_form_category_parent.py  0019_add_ldap_group_profile.py  0020_add_bulk_export_field.py  0021_alter_pendingnotification_scheduled_for_and_more.py  0022_add_bulk_pdf_export.py  0023_add_performance_indexes.py  0024_add_allow_resubmit.py  0025_workflowstage_approve_label.py  0026_alter_formfield_width.py  0027_formsubmission_form_data_gin.py  0028_workflowstagegroupconfig.py  0029_formfield_workflow_stage_fk_drop_groupconfig.py  0030_formfield_phone_type.py  0031_sub_workflows.py  0032_approved_pending_detached_sub_workflow.py  0033_add_reject_parent_to_subworkflowdefinition.py  0034_add_notificationlog.py  0035_migrate_prefill_source_strings.py  0036_add_workflowstage_auto_created.py  0037_migrate_flat_workflows_to_staged.py  0038_remove_legacy_prefill_source_and_approval_step.py  0039_update_help_text.py  0040_migrate_deprecated_features.py  0041_remove_deprecated_fields.py  0042_add_sub_workflow_section_label.py  0043_fix_form_data_decimal_encoding.py  0044_remove_subworkflowinstance_label.py  0045_stageapprovalgroup_workflow_name_label.py  0046_workflow_definition_one_to_many.py  0047_add_hide_approval_history.py  0048_workflowdefinition_trigger_conditions_and_more.py  0049_formfield_multifile_type.py  (+46 more)
docs/: CALCULATED_FIELDS.md  CLIENT_SIDE_ENHANCEMENTS.md  CLIENT_SIDE_EXAMPLES.md  CLIENT_SIDE_IMPLEMENTATION.md  CONFIGURATION.md  DYNAMIC_ASSIGNEES.md  EMBEDDING.md  FORM_BUILDER_BUGFIXES.md  FORM_BUILDER_IMPLEMENTATION.md  FORM_BUILDER_UI_DESIGN.md  FORM_BUILDER_USER_GUIDE.md  NOTIFICATIONS.md  PAYMENTS.md  POST_SUBMISSION_ACTIONS.md  PREFILL_SOURCES.md  QUICKSTART.md  RELEASE_NOTES_CLIENT_SIDE_ENHANCEMENTS.md  ROADMAP.md  SEND_BACK.md  SHARED_OPTION_LISTS.md  SSO_CONFIGURATION.md  SUB_WORKFLOWS.md  TESTING_MULTI_STEP_FORMS.md  VALUE_PROPOSITION.md  VISUAL_FORM_BUILDER_COMPLETE.md  VISUAL_FORM_BUILDER_ENHANCEMENTS.md  VISUAL_WORKFLOW_BUILDER.md  WEBHOOKS.md  WORDPRESS_PLUGIN.md  WORKFLOWS.md
example_project/: README.md  db.sqlite3
scripts/: bump_version.sh
tests/: conftest.py  settings.py  test_api.py  test_builders.py  test_conditions.py  test_diff_views.py  test_executor.py  test_forms.py  test_migrations.py  test_models.py  test_notifications.py  test_seed_farm_demo.py  test_signals.py  test_sync_api.py  test_templatetags.py  test_utils.py  test_views.py  test_webhooks.py  test_workflow_engine.py  urls.py
(+88 files in other folders)
